Compile and run tests in Java 17